syntax = "proto3";

package peace.services.bancho;

service BanchoRPC {
  rpc Login(LoginRequest) returns (LoginSuccess);
  rpc Ping(PingRequest) returns (HandleCompleted);
  rpc RequestStatusUpdate(RequestStatusUpdateRequest) returns (HandleCompleted);
  rpc PresenceRequestAll(PresenceRequestAllRequest) returns (HandleCompleted);
  rpc SpectateStop(SpectateStopRequest) returns (HandleCompleted);
  rpc SpectateCant(SpectateCantRequest) returns (HandleCompleted);
  rpc LobbyPart(LobbyPartRequest) returns (HandleCompleted);
  rpc LobbyJoin(LobbyJoinRequest) returns (HandleCompleted);
}

message HandleCompleted {}

message PingRequest { string session_id = 1; }

message ClientHashes {
  string path_hash = 1;
  string adapters = 2;
  string adapters_hash = 3;
  string uninstall_id = 4;
  string disk_id = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string client_version = 3;
  int32 utc_offset = 4;
  bool display_city = 5;
  bool only_friend_pm_allowed = 6;
  ClientHashes client_hashes = 7;
}

message LoginSuccess {
  string session_id = 1;
  optional bytes packet = 2;
}

message RequestStatusUpdateRequest { string session_id = 1; }

message PresenceRequestAllRequest { string session_id = 1; }

message SpectateStopRequest { string session_id = 1; }

message SpectateCantRequest { string session_id = 1; }

message LobbyPartRequest { string session_id = 1; }

message LobbyJoinRequest { string session_id = 1; }
